# cargo-semantic

./: Cargo.toml  readme.md
src/: main.rs
